force-app/main/default/objects/Product2/fields/Depth_cm__c.field-meta.xml
<CustomField>
    <fullName>Depth_cm__c</fullName>
    <description>Physical depth/length of the packaged product measured in centimeters (cm). Must be a whole number for API stability.</description>
    <inlineHelpText>Physical depth/length of the packaged product measured in centimeters (cm). Must be a whole number for API stability.</inlineHelpText>
    <label>Depth (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>