force-app/main/default/objects/Product2/fields/Unit_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Unit_Weight_Kg__c</fullName>
    <description>Unit weight of the product in kilograms. Accepts decimal values.</description>
    <inlineHelpText>Enter the product weight in kilograms. Decimal values are accepted. Example: 8,500.75 for a product weighing 8.5 tonnes. Leave blank if the product has no physical weight or does not require weighing.</inlineHelpText>
    <label>Unit Weight (Kg)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>