force-app/main/default/objects/Product2/fields/Width_cm__c.field-meta.xml
<CustomField>
    <fullName>Width_cm__c</fullName>
    <description>Physical width of the packaged product measured in centimeters (cm). Must be a whole number for API stability.</description>
    <inlineHelpText>Physical width of the packaged product measured in centimeters (cm). Must be a whole number for API stability.</inlineHelpText>
    <label>Width (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>